<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thu.taxinhanh.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#85000000"
        android:scaleType="centerCrop" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:theme="@style/Theme.AppCompat"
                android:textColorHint="@color/colorWhite"
                >

                <EditText
                    android:id="@+id/etFullname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:theme="@style/Theme.AppCompat"
                android:textColorHint="@color/colorWhite"
                >

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:theme="@style/Theme.AppCompat"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:theme="@style/Theme.AppCompat"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20dp"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:theme="@style/Theme.AppCompat"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:digits="0123456789+"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
