<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:background="@drawable/profile_bg">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/no_img_user"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/layout_bg">
        <LinearLayout
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/full_name"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowRadius="10"
                android:imeOptions="actionDone">
                <EditText
                    android:id="@+id/etFullName"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="15dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/phone_number"/>
            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:shadowRadius="10">
                <EditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:padding="15dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:text="@string/email"/>
            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowRadius="10">
                <EditText
                    android:focusableInTouchMode="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/etEmail"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/btnLogOut"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorRed"
            android:text="@string/logout"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
